Спрощення каталогу до мінімальної функціональності, робота над прайслистом.